--- a/oatnguquocnguti.yaml
+++ b/oatnguquocnguti.yaml
@@ -22957,7 +22957,7 @@
 （廣州音）	䶚	kủi/củi
 （廣州音）	偊	kủi/củi
 （廣州音）	偊	ử
-（廣州音）	偊	yữ
+（廣州音）	偊	ữ
 （台山音）	偊	kủi
 （廣州音）	弆	kủi/củi
 （南寧音）	弆	kử
@@ -23005,7 +23005,7 @@
 （台山音）	籧	khùi
 （廣州音）	翑	khùi
 （廣州音）	翑	kủi/củi
-（廣州音）	翑	yự
+（廣州音）	翑	ự
 （廣州音）	聥	kủi/củi
 （廣州音）	舉	kủi/củi
 （台山音）	舉	kủi
@@ -23016,14 +23016,14 @@
 （欽州音）	莒	kỉ
 （南寧音）	莒	kử
 （廣州音）	萭	kủi/củi
-（廣州音）	萭	yữ
+（廣州音）	萭	ữ
 （廣州音）	蒟	kủi/củi
 （台山音）	蒟	kủi
 （欽州音）	蒟	kỉ
 （南寧音）	蒟	kử
 （南寧音）	蒟	(訓)lâu
 （廣州音）	蝺	kủi/củi
-（廣州音）	蝺	yữ
+（廣州音）	蝺	ữ
 （廣州音）	螶	khùi
 （廣州音）	螶	kủi/củi
 （廣州音）	襷	kủi/củi
@@ -23033,9 +23033,9 @@
 （欽州音）	踽	kỉ
 （南寧音）	踽	kử
 （廣州音）	鄅	kủi/củi
-（廣州音）	鄅	yữ
+（廣州音）	鄅	ữ
 （欽州音）	鄅	ỷ
-（南寧音）	鄅	yữ
+（南寧音）	鄅	ữ
 （廣州音）	齲	kủi/củi
 （台山音）	齲	kủi
 （欽州音）	齲	kỉ
@@ -25558,7 +25558,7 @@
 （廣州音）	莞	quan
 （廣州音）	莞	quôn
 （廣州音）	莞	quổn
-（廣州音）	莞	vun
+（廣州音）	莞	vôn
 （廣州音）	莞	vổn
 （廣州音）	莞	vỗn
 （台山音）	莞	kỏn
@@ -29685,7 +29685,7 @@
 （廣州音）	䏏	hui
 （廣州音）	䖉	hui
 （廣州音）	吁	hui
-（廣州音）	吁	yự
+（廣州音）	吁	ự
 （廣州音）	吁	ư
 （台山音）	吁	húi
 （台山音）	吁	yệc
@@ -29704,7 +29704,7 @@
 （南寧音）	噓	sừ
 （廣州音）	圩	hui
 （廣州音）	圩	ùy
-（廣州音）	圩	yừ
+（廣州音）	圩	ừ
 （台山音）	圩	ùy/vỳ
 （欽州音）	圩	hi
 （南寧音）	圩	hư
@@ -29790,7 +29790,7 @@
 （廣州音）	珝	hủi
 （南寧音）	珝	hử
 （廣州音）	祤	hủi
-（廣州音）	祤	yữ
+（廣州音）	祤	ữ
 （廣州音）	紶	hủi
 （廣州音）	紶	khui
 （廣州音）	詓	hủi
@@ -33211,10 +33211,10 @@
 （廣州音）	揂	yầu
 （廣州音）	揄	yầu
 （廣州音）	揄	yễu
-（廣州音）	揄	yừ
+（廣州音）	揄	ừ
 （台山音）	揄	yì
 （欽州音）	揄	yì
-（南寧音）	揄	yừ
+（南寧音）	揄	ừ
 （通用版）	揉	ngầu
 （通用版）	揉	ngậu
 （廣州音）	揉	yầu
@@ -33224,10 +33224,10 @@
 （南寧音）	揉	yầu
 （廣州音）	擩	yũi
 （廣州音）	擩	yầu
-（廣州音）	擩	yừ
-（廣州音）	擩	yữ
+（廣州音）	擩	ừ
+（廣州音）	擩	ữ
 （台山音）	擩	yì
-（南寧音）	擩	yữ
+（南寧音）	擩	ữ
 （通用版）	攸	ừu
 （廣州音）	攸	yầu
 （台山音）	攸	ừu
@@ -34271,8 +34271,8 @@
 （廣州音）	臑	nạo
 （廣州音）	臑	nộ
 （廣州音）	臑	yì
-（廣州音）	臑	yừ
-（南寧音）	臑	yừ
+（廣州音）	臑	ừ
+（南寧音）	臑	ừ
 （南寧音）	臑	nạo
 （南寧音）	臑	(語)no
 （南寧音）	臑	(語)nỏ
@@ -36785,10 +36785,10 @@
 （欽州音）	籥	yược
 （南寧音）	籥	yược
 （廣州音）	籲	yược
-（廣州音）	籲	yự
+（廣州音）	籲	ự
 （台山音）	籲	yệc
 （欽州音）	籲	yì
-（南寧音）	籲	yự
+（南寧音）	籲	ự
 （廣州音）	纅	yược
 （通用版）	蒻	nhược
 （廣州音）	蒻	yược
@@ -37309,7 +37309,7 @@
 （廣州音）	媷	yục
 （廣州音）	宍	yục
 （廣州音）	峪	yục
-（廣州音）	峪	yự
+（廣州音）	峪	ự
 （台山音）	峪	yị
 （台山音）	峪	yục
 （欽州音）	峪	yục
@@ -37344,7 +37344,7 @@
 （台山音）	玉	ngục
 （欽州音）	玉	nhục
 （南寧音）	玉	yục
-（南寧音）	玉	(語)yự
+（南寧音）	玉	(語)ự
 （廣州音）	砡	yục
 （廣州音）	硲	yục
 （南寧音）	硲	yục
@@ -37652,12 +37652,12 @@
 （台山音）	傛	yủng
 （通用版）	喁	ngừ
 （廣州音）	喁	yùng
-（廣州音）	喁	yừ
+（廣州音）	喁	ừ
 （台山音）	喁	ngùng
 （台山音）	喁	ngùi
 （台山音）	喁	yùng
 （南寧音）	喁	yùng
-（南寧音）	喁	yừ
+（南寧音）	喁	ừ
 （廣州音）	墉	yùng
 （台山音）	墉	yùng
 （南寧音）	墉	yùng
@@ -37770,7 +37770,7 @@
 （廣州音）	駥	yùng
 （台山音）	駥	yùng
 （廣州音）	鰅	yùng
-（廣州音）	鰅	yừ
+（廣州音）	鰅	ừ
 （廣州音）	鰫	sùng
 （廣州音）	鰫	yùng
 （台山音）	鰫	yùng
@@ -37804,12 +37804,12 @@
 （廣州音）	愹	yũng
 （廣州音）	硧	yũng
 （廣州音）	臾	yũng
-（廣州音）	臾	yừ
+（廣州音）	臾	ừ
 （台山音）	臾	kỵ
 （台山音）	臾	yì
 （台山音）	臾	yủng
 （欽州音）	臾	yì
-（南寧音）	臾	yừ
+（南寧音）	臾	ừ
 （廣州音）	𠋀	yũng
 （廣州音）	𧗴	yũng
 （台山音）	𧗴	yủng
@@ -37837,19 +37837,19 @@
 （廣州音）	䨕	ư
 （廣州音）	䩽	ư
 （廣州音）	乻	ư
-（廣州音）	于	yừ
+（廣州音）	于	ừ
 （廣州音）	于	ư
 （台山音）	于	í
 （欽州音）	于	yì
 （南寧音）	于	ư
-（南寧音）	于	yừ
+（南寧音）	于	ừ
 （廣州音）	亐	ư
 （廣州音）	唹	ư
 （廣州音）	扜	ư
 （廣州音）	扵	vu
 （廣州音）	扵	ư
 （廣州音）	於	vu
-（廣州音）	於	yừ
+（廣州音）	於	ừ
 （廣州音）	於	ư
 （台山音）	於	ú
 （台山音）	於	ỉ
@@ -37858,7 +37858,7 @@
 （南寧音）	於	ư
 （南寧音）	於	vu
 （廣州音）	旕	ư
-（廣州音）	杅	yừ
+（廣州音）	杅	ừ
 （廣州音）	杅	ư
 （廣州音）	淤	ứ
 （廣州音）	淤	ử
@@ -37876,13 +37876,13 @@
 （南寧音）	瘀	ử
 （廣州音）	盓	vu
 （廣州音）	盓	ư
-（廣州音）	穻	yữ
+（廣州音）	穻	ữ
 （廣州音）	穻	ư
-（廣州音）	竽	yừ
+（廣州音）	竽	ừ
 （廣州音）	竽	ư
 （台山音）	竽	í
 （欽州音）	竽	yì
-（南寧音）	竽	yừ
+（南寧音）	竽	ừ
 （廣州音）	箊	ư
 （廣州音）	紆	ư
 （台山音）	紆	í
@@ -37897,17 +37897,17 @@
 （廣州音）	衧	ư
 （廣州音）	込	ư
 （南寧音）	込	yập
-（廣州音）	迂	yừ
+（廣州音）	迂	ừ
 （廣州音）	迂	ư
 （台山音）	迂	húi
 （台山音）	迂	í
 （欽州音）	迂	y
 （南寧音）	迂	ư
 （廣州音）	迃	ư
-（廣州音）	邘	yừ
+（廣州音）	邘	ừ
 （廣州音）	邘	ư
 （欽州音）	邘	yì
-（南寧音）	邘	yừ
+（南寧音）	邘	ừ
 （廣州音）	酑	ư
 （廣州音）	陓	vu
 （廣州音）	陓	ư
@@ -37937,14 +37937,14 @@
 （南寧音）	痀	khư
 （通用版）	魚	ngừ
 （通用版）	魚	ngữ
-（廣州音）	魚	yừ
-（廣州音）	魚	ử/yữ
+（廣州音）	魚	ừ
+（廣州音）	魚	ử/ữ
 （台山音）	魚	ngùi
 （台山音）	魚	ngũi
 （欽州音）	魚	nhì
-（南寧音）	魚	yừ
-（廣州音）	𩺰	yừ
-（廣州音）	𩺰	ử/yữ
+（南寧音）	魚	ừ
+（廣州音）	𩺰	ừ
+（廣州音）	𩺰	ử/ữ
 （廣州音）	𩺰	ǹg
 （廣州音）	䣴	ứ
 （廣州音）	棜	ứ
@@ -37955,672 +37955,672 @@
 （台山音）	飫	yị
 （南寧音）	飫	ứ
 （廣州音）	饇	ứ
-（廣州音）	㐵	yừ
-（廣州音）	㔱	yừ
-（廣州音）	㖲	yừ
-（廣州音）	㤤	yừ
-（廣州音）	㥚	yừ
-（廣州音）	㥥	yừ
-（廣州音）	㦙	yừ
-（廣州音）	㦛	yừ
+（廣州音）	㐵	ừ
+（廣州音）	㔱	ừ
+（廣州音）	㖲	ừ
+（廣州音）	㤤	ừ
+（廣州音）	㥚	ừ
+（廣州音）	㥥	ừ
+（廣州音）	㦙	ừ
+（廣州音）	㦛	ừ
 （欽州音）	㦛	yì
 （欽州音）	㦛	yò
 （欽州音）	㦛	ỷ
-（廣州音）	㬂	yừ
-（廣州音）	㬰	yừ
-（廣州音）	㭌	yừ
-（廣州音）	㳛	yừ
-（廣州音）	㶛	yừ
-（廣州音）	㷒	yừ
-（廣州音）	㺞	yừ
-（廣州音）	㻀	yừ
-（廣州音）	㻦	yừ
-（廣州音）	㼶	yừ
-（廣州音）	㾒	yừ
-（廣州音）	䁩	yừ
-（廣州音）	䂛	yừ
-（廣州音）	䃋	yừ
-（廣州音）	䄖	yừ
-（廣州音）	䄨	yừ
-（廣州音）	䍂	yừ
-（廣州音）	䏸	yừ
-（廣州音）	䐳	yừ
-（廣州音）	䔡	yừ
-（廣州音）	䗨	yừ
-（廣州音）	䘫	yừ
-（廣州音）	䚤	yừ
-（廣州音）	䛕	yừ
-（廣州音）	䜽	yừ
-（廣州音）	䞕	yừ
-（廣州音）	䢓	yừ
-（廣州音）	䣿	yừ
-（廣州音）	䩒	yừ
-（廣州音）	䫱	yừ
-（廣州音）	䬔	yừ
-（廣州音）	䰭	yừ
-（廣州音）	䰰	yừ
-（廣州音）	䰻	yừ
+（廣州音）	㬂	ừ
+（廣州音）	㬰	ừ
+（廣州音）	㭌	ừ
+（廣州音）	㳛	ừ
+（廣州音）	㶛	ừ
+（廣州音）	㷒	ừ
+（廣州音）	㺞	ừ
+（廣州音）	㻀	ừ
+（廣州音）	㻦	ừ
+（廣州音）	㼶	ừ
+（廣州音）	㾒	ừ
+（廣州音）	䁩	ừ
+（廣州音）	䂛	ừ
+（廣州音）	䃋	ừ
+（廣州音）	䄖	ừ
+（廣州音）	䄨	ừ
+（廣州音）	䍂	ừ
+（廣州音）	䏸	ừ
+（廣州音）	䐳	ừ
+（廣州音）	䔡	ừ
+（廣州音）	䗨	ừ
+（廣州音）	䘫	ừ
+（廣州音）	䚤	ừ
+（廣州音）	䛕	ừ
+（廣州音）	䜽	ừ
+（廣州音）	䞕	ừ
+（廣州音）	䢓	ừ
+（廣州音）	䣿	ừ
+（廣州音）	䩒	ừ
+（廣州音）	䫱	ừ
+（廣州音）	䬔	ừ
+（廣州音）	䰭	ừ
+（廣州音）	䰰	ừ
+（廣州音）	䰻	ừ
 （通用版）	䱷	ngừ
-（廣州音）	䱷	yừ
+（廣州音）	䱷	ừ
 （台山音）	䱷	ngùi
-（廣州音）	䲆	yừ
-（廣州音）	予	yừ
-（廣州音）	予	yữ
+（廣州音）	䲆	ừ
+（廣州音）	予	ừ
+（廣州音）	予	ữ
 （台山音）	予	yì
 （台山音）	予	yĩ
 （欽州音）	予	yì
 （欽州音）	予	ỷ
-（南寧音）	予	yừ
-（南寧音）	予	yữ
-（廣州音）	伃	yừ
-（廣州音）	余	yừ
+（南寧音）	予	ừ
+（南寧音）	予	ữ
+（廣州音）	伃	ừ
+（廣州音）	余	ừ
 （台山音）	余	yì
 （欽州音）	余	yì
-（南寧音）	余	yừ
+（南寧音）	余	ừ
 （通用版）	侞	nhừ
-（廣州音）	侞	yừ
+（廣州音）	侞	ừ
 （台山音）	侞	ngùi
 （廣州音）	俞	sứ
-（廣州音）	俞	yừ
-（廣州音）	俞	yự
+（廣州音）	俞	ừ
+（廣州音）	俞	ự
 （台山音）	俞	sí
 （台山音）	俞	yì
 （欽州音）	俞	yì
-（南寧音）	俞	yừ
-（廣州音）	儒	yừ
+（南寧音）	俞	ừ
+（廣州音）	儒	ừ
 （台山音）	儒	yì
 （欽州音）	儒	yì
-（南寧音）	儒	yừ
+（南寧音）	儒	ừ
 （廣州音）	兪	sứ
-（廣州音）	兪	yừ
-（廣州音）	兪	yự
+（廣州音）	兪	ừ
+（廣州音）	兪	ự
 （廣州音）	吾	ngà
-（廣州音）	吾	yừ
+（廣州音）	吾	ừ
 （廣州音）	吾	ǹg
 （台山音）	吾	ñg
 （欽州音）	吾	ǹg
 （南寧音）	吾	ǹg
-（廣州音）	嚅	yừ
+（廣州音）	嚅	ừ
 （台山音）	嚅	yì
 （欽州音）	嚅	yì
-（南寧音）	嚅	yừ
-（廣州音）	堣	yừ
-（廣州音）	堬	yừ
+（南寧音）	嚅	ừ
+（廣州音）	堣	ừ
+（廣州音）	堬	ừ
 （通用版）	如	nhừ
-（廣州音）	如	yừ
+（廣州音）	如	ừ
 （台山音）	如	ngùi
 （欽州音）	如	yì
-（南寧音）	如	yừ
-（廣州音）	妤	yừ
+（南寧音）	如	ừ
+（廣州音）	妤	ừ
 （台山音）	妤	yì
 （欽州音）	妤	yì
-（南寧音）	妤	yừ
+（南寧音）	妤	ừ
 （通用版）	娛	ngừ
-（廣州音）	娛	yừ
+（廣州音）	娛	ừ
 （台山音）	娛	ngùi
 （欽州音）	娛	yì
-（南寧音）	娛	yừ
-（廣州音）	娯	yừ
+（南寧音）	娛	ừ
+（廣州音）	娯	ừ
 （廣州音）	婾	thâu
-（廣州音）	婾	yừ
+（廣州音）	婾	ừ
 （台山音）	婾	hấu
 （台山音）	婾	yì
 （廣州音）	媮	thâu
-（廣州音）	媮	yừ
+（廣州音）	媮	ừ
 （台山音）	媮	hấu
 （台山音）	媮	yì
-（廣州音）	嬩	yừ
-（廣州音）	嬬	yừ
-（南寧音）	嬬	yừ
-（廣州音）	孺	yừ
-（廣州音）	孺	yự
+（廣州音）	嬩	ừ
+（廣州音）	嬬	ừ
+（南寧音）	嬬	ừ
+（廣州音）	孺	ừ
+（廣州音）	孺	ự
 （台山音）	孺	yì
 （欽州音）	孺	yì
-（南寧音）	孺	yừ
-（廣州音）	崳	yừ
-（南寧音）	崳	yừ
+（南寧音）	孺	ừ
+（廣州音）	崳	ừ
+（南寧音）	崳	ừ
 （通用版）	嵎	ngừ
-（廣州音）	嵎	yừ
+（廣州音）	嵎	ừ
 （台山音）	嵎	ngũi
-（南寧音）	嵎	yừ
-（廣州音）	嵛	yừ
+（南寧音）	嵎	ừ
+（廣州音）	嵛	ừ
 （台山音）	嵛	yì
 （欽州音）	嵛	yì
-（南寧音）	嵛	yừ
+（南寧音）	嵛	ừ
 （通用版）	嶼	tụi
 （廣州音）	嶼	chụi
-（廣州音）	嶼	yừ
-（廣州音）	嶼	yữ
+（廣州音）	嶼	ừ
+（廣州音）	嶼	ữ
 （台山音）	嶼	tụi
 （台山音）	嶼	yì
 （欽州音）	嶼	chùi
 （欽州音）	嶼	yì
-（南寧音）	嶼	(常)yữ
+（南寧音）	嶼	(常)ữ
 （南寧音）	嶼	chự
-（廣州音）	帤	yừ
+（廣州音）	帤	ừ
 （欽州音）	帤	yì
-（廣州音）	庾	yừ
-（廣州音）	庾	yữ
+（廣州音）	庾	ừ
+（廣州音）	庾	ữ
 （台山音）	庾	yì
 （欽州音）	庾	ỷ
-（南寧音）	庾	(又)yừ
-（南寧音）	庾	yữ
-（廣州音）	愉	yừ
-（廣州音）	愉	yự
+（南寧音）	庾	(又)ừ
+（南寧音）	庾	ữ
+（廣州音）	愉	ừ
+（廣州音）	愉	ự
 （台山音）	愉	yì
 （欽州音）	愉	yì
-（南寧音）	愉	yừ
-（南寧音）	愉	(又)yự
+（南寧音）	愉	ừ
+（南寧音）	愉	(又)ự
 （通用版）	愚	ngừ
-（廣州音）	愚	yừ
+（廣州音）	愚	ừ
 （台山音）	愚	ngùi
 （欽州音）	愚	yì
-（南寧音）	愚	yừ
-（廣州音）	懙	yừ
-（廣州音）	懙	yữ
+（南寧音）	愚	ừ
+（廣州音）	懙	ừ
+（廣州音）	懙	ữ
 （欽州音）	懙	yì
 （欽州音）	懙	ỷ
 （廣州音）	挐	na
 （廣州音）	挐	nà
 （廣州音）	挐	nào
-（廣州音）	挐	yừ
+（廣州音）	挐	ừ
 （欽州音）	挐	yì
-（南寧音）	挐	yừ
+（南寧音）	挐	ừ
 （南寧音）	挐	nà
-（廣州音）	旟	yừ
-（南寧音）	旟	yừ
-（廣州音）	曘	yừ
-（廣州音）	桇	yừ
-（廣州音）	桙	yừ
-（廣州音）	楡	yừ
-（廣州音）	楰	yừ
-（廣州音）	榆	yừ
+（廣州音）	旟	ừ
+（南寧音）	旟	ừ
+（廣州音）	曘	ừ
+（廣州音）	桇	ừ
+（廣州音）	桙	ừ
+（廣州音）	楡	ừ
+（廣州音）	楰	ừ
+（廣州音）	榆	ừ
 （台山音）	榆	yì
 （欽州音）	榆	yì
-（南寧音）	榆	yừ
-（廣州音）	歈	yừ
-（南寧音）	歈	yừ
-（廣州音）	歟	yừ
+（南寧音）	榆	ừ
+（廣州音）	歈	ừ
+（南寧音）	歈	ừ
+（廣州音）	歟	ừ
 （台山音）	歟	yì
 （欽州音）	歟	yì
-（南寧音）	歟	yừ
-（廣州音）	歶	yừ
+（南寧音）	歟	ừ
+（廣州音）	歶	ừ
 （廣州音）	毹	sư
-（廣州音）	毹	yừ
+（廣州音）	毹	ừ
 （台山音）	毹	sí
 （台山音）	毹	yì
-（南寧音）	毹	yừ
+（南寧音）	毹	ừ
 （南寧音）	毹	(又)sư
 （廣州音）	毺	sư
-（廣州音）	毺	yừ
-（廣州音）	渝	yừ
+（廣州音）	毺	ừ
+（廣州音）	渝	ừ
 （台山音）	渝	yì
 （欽州音）	渝	yì
-（南寧音）	渝	yừ
-（廣州音）	渪	yừ
-（廣州音）	湡	yừ
+（南寧音）	渝	ừ
+（廣州音）	渪	ừ
+（廣州音）	湡	ừ
 （通用版）	漁	ngừ
-（廣州音）	漁	yừ
+（廣州音）	漁	ừ
 （台山音）	漁	ngùi
 （欽州音）	漁	nhì
-（南寧音）	漁	yừ
-（廣州音）	澞	yừ
-（廣州音）	濡	yừ
+（南寧音）	漁	ừ
+（廣州音）	澞	ừ
+（廣州音）	濡	ừ
 （台山音）	濡	yì
 （欽州音）	濡	yì
-（南寧音）	濡	yừ
+（南寧音）	濡	ừ
 （廣州音）	燸	noạn
-（廣州音）	燸	yừ
+（廣州音）	燸	ừ
 （廣州音）	牏	thầu
-（廣州音）	牏	yừ
-（南寧音）	牏	yừ
+（廣州音）	牏	ừ
+（南寧音）	牏	ừ
 （南寧音）	牏	(又)thầu
-（廣州音）	狳	yừ
+（廣州音）	狳	ừ
 （台山音）	狳	yì
 （欽州音）	狳	yì
-（南寧音）	狳	yừ
-（廣州音）	瑜	yừ
+（南寧音）	狳	ừ
+（廣州音）	瑜	ừ
 （台山音）	瑜	yì
 （欽州音）	瑜	yì
-（南寧音）	瑜	yừ
+（南寧音）	瑜	ừ
 （通用版）	璵	nhừ
-（廣州音）	璵	yừ
+（廣州音）	璵	ừ
 （台山音）	璵	ngùi
-（南寧音）	璵	yừ
+（南寧音）	璵	ừ
 （廣州音）	畬	se
 （廣州音）	畬	sè
-（廣州音）	畬	yừ
+（廣州音）	畬	ừ
 （台山音）	畬	sè
 （台山音）	畬	í
 （欽州音）	畬	se
 （欽州音）	畬	yì
-（南寧音）	畬	yừ
+（南寧音）	畬	ừ
 （南寧音）	畬	se
-（廣州音）	畭	yừ
-（廣州音）	盂	yừ
+（廣州音）	畭	ừ
+（廣州音）	盂	ừ
 （台山音）	盂	yì
 （欽州音）	盂	yì
-（南寧音）	盂	yừ
-（廣州音）	睮	yừ
-（廣州音）	硢	yừ
+（南寧音）	盂	ừ
+（廣州音）	睮	ừ
+（廣州音）	硢	ừ
 （通用版）	禺	ngừ
 （通用版）	禺	ngự
-（廣州音）	禺	yừ
-（廣州音）	禺	yự
+（廣州音）	禺	ừ
+（廣州音）	禺	ự
 （台山音）	禺	ngùi
 （欽州音）	禺	yì
-（南寧音）	禺	yừ
-（廣州音）	窬	yừ
-（廣州音）	窬	yự
+（南寧音）	禺	ừ
+（廣州音）	窬	ừ
+（廣州音）	窬	ự
 （台山音）	窬	yì
-（南寧音）	窬	yừ
-（廣州音）	筎	yừ
-（廣州音）	籅	yừ
+（南寧音）	窬	ừ
+（廣州音）	筎	ừ
+（廣州音）	籅	ừ
 （廣州音）	繻	sui
-（廣州音）	繻	yừ
+（廣州音）	繻	ừ
 （欽州音）	繻	sli
 （南寧音）	繻	slư
-（廣州音）	羭	yừ
+（廣州音）	羭	ừ
 （廣州音）	腢	ngẫu
-（廣州音）	腢	yừ
-（廣州音）	腴	yừ
+（廣州音）	腢	ừ
+（廣州音）	腴	ừ
 （台山音）	腴	yì
 （欽州音）	腴	yì
-（南寧音）	腴	yừ
-（廣州音）	舁	yừ
+（南寧音）	腴	ừ
+（廣州音）	舁	ừ
 （台山音）	舁	yì
-（南寧音）	舁	yừ
-（廣州音）	與	yừ
-（廣州音）	與	yữ
-（廣州音）	與	yự
+（南寧音）	舁	ừ
+（廣州音）	與	ừ
+（廣州音）	與	ữ
+（廣州音）	與	ự
 （台山音）	與	yì
 （台山音）	與	yĩ
 （欽州音）	與	yì
 （欽州音）	與	ỷ
-（南寧音）	與	yữ
-（廣州音）	艅	yừ
-（南寧音）	艅	yừ
-（廣州音）	茰	yừ
+（南寧音）	與	ữ
+（廣州音）	艅	ừ
+（南寧音）	艅	ừ
+（廣州音）	茰	ừ
 （通用版）	茹	nhừ
-（廣州音）	茹	yừ
-（廣州音）	茹	yự
+（廣州音）	茹	ừ
+（廣州音）	茹	ự
 （台山音）	茹	ngùi
 （欽州音）	茹	yì
-（南寧音）	茹	yừ
-（廣州音）	萮	yừ
+（南寧音）	茹	ừ
+（廣州音）	萮	ừ
 （台山音）	萮	yì
-（廣州音）	萸	yừ
+（廣州音）	萸	ừ
 （台山音）	萸	yì
 （欽州音）	萸	yì
-（南寧音）	萸	yừ
+（南寧音）	萸	ừ
 （廣州音）	蒘	lùi
 （廣州音）	蒘	nà
 （廣州音）	蒘	nùi
-（廣州音）	蒘	yừ
-（廣州音）	蕍	yừ
-（廣州音）	蕠	yừ
-（廣州音）	薷	yừ
+（廣州音）	蒘	ừ
+（廣州音）	蕍	ừ
+（廣州音）	蕠	ừ
+（廣州音）	薷	ừ
 （台山音）	薷	yì
-（南寧音）	薷	yừ
+（南寧音）	薷	ừ
 （通用版）	虞	ngừ
-（廣州音）	虞	yừ
+（廣州音）	虞	ừ
 （台山音）	虞	ngùi
 （欽州音）	虞	yì
-（南寧音）	虞	yừ
-（廣州音）	蝓	yừ
+（南寧音）	虞	ừ
+（廣州音）	蝓	ừ
 （台山音）	蝓	yì
 （欽州音）	蝓	yì
-（南寧音）	蝓	yừ
+（南寧音）	蝓	ừ
 （廣州音）	蝡	oãn
-（廣州音）	蝡	yừ
+（廣州音）	蝡	ừ
 （欽州音）	蝡	nhiên
 （欽州音）	蝡	nhiển
-（廣州音）	螸	yừ
+（廣州音）	螸	ừ
 （廣州音）	蠕	oãn
-（廣州音）	蠕	yừ
+（廣州音）	蠕	ừ
 （台山音）	蠕	yì
 （欽州音）	蠕	yì
-（南寧音）	蠕	yừ
+（南寧音）	蠕	ừ
 （通用版）	袽	nhừ
-（廣州音）	袽	yừ
+（廣州音）	袽	ừ
 （台山音）	袽	ngùi
-（廣州音）	褕	yừ
-（南寧音）	褕	yừ
-（廣州音）	襦	yừ
+（廣州音）	褕	ừ
+（南寧音）	褕	ừ
+（廣州音）	襦	ừ
 （台山音）	襦	yì
 （欽州音）	襦	yì
-（南寧音）	襦	yừ
-（廣州音）	覦	yừ
-（廣州音）	覦	yự
+（南寧音）	襦	ừ
+（廣州音）	覦	ừ
+（廣州音）	覦	ự
 （台山音）	覦	yì
 （欽州音）	覦	yì
-（南寧音）	覦	yừ
-（廣州音）	諛	yừ
+（南寧音）	覦	ừ
+（廣州音）	諛	ừ
 （台山音）	諛	yì
 （欽州音）	諛	yì
-（南寧音）	諛	yừ
-（廣州音）	謣	yừ
-（廣州音）	譃	yừ
-（廣州音）	譽	yừ
-（廣州音）	譽	yự
+（南寧音）	諛	ừ
+（廣州音）	謣	ừ
+（廣州音）	譃	ừ
+（廣州音）	譽	ừ
+（廣州音）	譽	ự
 （台山音）	譽	yị
 （欽州音）	譽	yì
-（南寧音）	譽	yự
-（廣州音）	踰	yừ
-（廣州音）	踰	yự
+（南寧音）	譽	ự
+（廣州音）	踰	ừ
+（廣州音）	踰	ự
 （台山音）	踰	yì
 （欽州音）	踰	yì
-（南寧音）	踰	yừ
-（廣州音）	輿	yừ
+（南寧音）	踰	ừ
+（廣州音）	輿	ừ
 （台山音）	輿	yì
 （欽州音）	輿	yì
-（南寧音）	輿	yừ
-（廣州音）	轝	yừ
-（廣州音）	逾	yừ
-（廣州音）	逾	yự
+（南寧音）	輿	ừ
+（廣州音）	轝	ừ
+（廣州音）	逾	ừ
+（廣州音）	逾	ự
 （台山音）	逾	yì
 （欽州音）	逾	yì
-（南寧音）	逾	yừ
-（廣州音）	邚	yừ
-（廣州音）	醹	yừ
-（廣州音）	醹	yữ
+（南寧音）	逾	ừ
+（廣州音）	邚	ừ
+（廣州音）	醹	ừ
+（廣州音）	醹	ữ
 （廣州音）	釪	và
-（廣州音）	釪	yừ
+（廣州音）	釪	ừ
 （通用版）	銣	nhừ
-（廣州音）	銣	yừ
-（廣州音）	銣	yự
+（廣州音）	銣	ừ
+（廣州音）	銣	ự
 （台山音）	銣	ngùi
 （欽州音）	銣	yì
-（南寧音）	銣	yừ
-（廣州音）	鍝	yừ
-（廣州音）	隃	yừ
-（南寧音）	隃	yừ
+（南寧音）	銣	ừ
+（廣州音）	鍝	ừ
+（廣州音）	隃	ừ
+（南寧音）	隃	ừ
 （通用版）	隅	ngừ
 （通用版）	隅	ngự
-（廣州音）	隅	yừ
-（廣州音）	隅	yự
+（廣州音）	隅	ừ
+（廣州音）	隅	ự
 （台山音）	隅	ngùi
 （欽州音）	隅	yì
-（南寧音）	隅	yừ
-（廣州音）	雓	yừ
-（廣州音）	雩	yừ
+（南寧音）	隅	ừ
+（廣州音）	雓	ừ
+（廣州音）	雩	ừ
 （台山音）	雩	yì
 （欽州音）	雩	yì
-（南寧音）	雩	yừ
-（廣州音）	顬	yừ
+（南寧音）	雩	ừ
+（廣州音）	顬	ừ
 （台山音）	顬	yì
-（南寧音）	顬	yừ
-（廣州音）	餘	yừ
+（南寧音）	顬	ừ
+（廣州音）	餘	ừ
 （台山音）	餘	yì
 （欽州音）	餘	yì
 （欽州音）	餘	yì
-（南寧音）	餘	yừ
-（廣州音）	馀	yừ
-（廣州音）	騟	yừ
-（廣州音）	骬	yừ
+（南寧音）	餘	ừ
+（廣州音）	馀	ừ
+（廣州音）	騟	ừ
+（廣州音）	骬	ừ
 （廣州音）	髃	ngẫu
-（廣州音）	髃	yừ
-（南寧音）	髃	yừ
-（廣州音）	魣	yừ
+（廣州音）	髃	ừ
+（南寧音）	髃	ừ
+（廣州音）	魣	ừ
 （台山音）	魣	yì
-（廣州音）	鮽	yừ
-（廣州音）	鱬	yừ
-（廣州音）	鴑	yừ
-（廣州音）	鴽	yừ
-（廣州音）	鷠	yừ
-（廣州音）	鸆	yừ
-（廣州音）	鸒	yừ
-（廣州音）	齵	yừ
-（廣州音）	𠈌	yừ
+（廣州音）	鮽	ừ
+（廣州音）	鱬	ừ
+（廣州音）	鴑	ừ
+（廣州音）	鴽	ừ
+（廣州音）	鷠	ừ
+（廣州音）	鸆	ừ
+（廣州音）	鸒	ừ
+（廣州音）	齵	ừ
+（廣州音）	𠈌	ừ
 （台山音）	𠈌	sần
-（廣州音）	𠏋	yừ
-（廣州音）	𠯆	yừ
-（廣州音）	𡢢	yừ
-（廣州音）	𢢭	yừ
-（廣州音）	𣈯	yừ
-（廣州音）	𤲞	yừ
-（廣州音）	𦖭	yừ
-（廣州音）	𦽳	yừ
-（廣州音）	𩁹	yừ
-（廣州音）	𩁹	yự
-（廣州音）	𩦢	yừ
-（廣州音）	㐠	yữ
-（廣州音）	㑨	yữ
-（廣州音）	㒁	yữ
-（廣州音）	㒜	yữ
-（廣州音）	㖳	yữ
-（廣州音）	㘾	yữ
-（廣州音）	㙑	yữ
-（廣州音）	㙖	yữ
-（廣州音）	㝢	yữ
-（廣州音）	㡰	yữ
-（廣州音）	㨎	yữ
-（廣州音）	㲾	yữ
-（廣州音）	㺄	yữ
+（廣州音）	𠏋	ừ
+（廣州音）	𠯆	ừ
+（廣州音）	𡢢	ừ
+（廣州音）	𢢭	ừ
+（廣州音）	𣈯	ừ
+（廣州音）	𤲞	ừ
+（廣州音）	𦖭	ừ
+（廣州音）	𦽳	ừ
+（廣州音）	𩁹	ừ
+（廣州音）	𩁹	ự
+（廣州音）	𩦢	ừ
+（廣州音）	㐠	ữ
+（廣州音）	㑨	ữ
+（廣州音）	㒁	ữ
+（廣州音）	㒜	ữ
+（廣州音）	㖳	ữ
+（廣州音）	㘾	ữ
+（廣州音）	㙑	ữ
+（廣州音）	㙖	ữ
+（廣州音）	㝢	ữ
+（廣州音）	㡰	ữ
+（廣州音）	㨎	ữ
+（廣州音）	㲾	ữ
+（廣州音）	㺄	ữ
 （台山音）	㺄	yì
-（南寧音）	㺄	yữ
-（廣州音）	㼌	yữ
-（廣州音）	䣁	yữ
-（廣州音）	䥏	yữ
-（廣州音）	䨞	yữ
+（南寧音）	㺄	ữ
+（廣州音）	㼌	ữ
+（廣州音）	䣁	ữ
+（廣州音）	䥏	ữ
+（廣州音）	䨞	ữ
 （通用版）	乳	nhữ
-（廣州音）	乳	yữ
+（廣州音）	乳	ữ
 （台山音）	乳	ngũi
 （欽州音）	乳	nhủi
 （欽州音）	乳	ỷ
-（南寧音）	乳	yữ
+（南寧音）	乳	ữ
 （通用版）	俁	ngữ
-（廣州音）	俁	yữ
+（廣州音）	俁	ữ
 （台山音）	俁	ngũi
 （欽州音）	俁	ỷ
-（南寧音）	俁	yữ
-（廣州音）	噳	yữ
+（南寧音）	俁	ữ
+（廣州音）	噳	ữ
 （通用版）	圄	ngữ
-（廣州音）	圄	yữ
+（廣州音）	圄	ữ
 （台山音）	圄	ngũi
 （欽州音）	圄	ỷ
-（南寧音）	圄	yữ
+（南寧音）	圄	ữ
 （通用版）	圉	ngữ
-（廣州音）	圉	yữ
+（廣州音）	圉	ữ
 （台山音）	圉	ngũi
-（南寧音）	圉	yữ
+（南寧音）	圉	ữ
 （通用版）	女	nữ
 （廣州音）	女	nũi
 （廣州音）	女	nụi
 （廣州音）	女	nủi
-（廣州音）	女	yữ
+（廣州音）	女	ữ
 （台山音）	女	nủi
 （欽州音）	女	nỉ
 （南寧音）	女	(白)nử
 （南寧音）	女	nữ
-（廣州音）	宇	yữ
+（廣州音）	宇	ữ
 （台山音）	宇	yĩ
 （欽州音）	宇	ỷ
-（南寧音）	宇	yữ
-（廣州音）	寙	yữ
-（廣州音）	峿	yữ
+（南寧音）	宇	ữ
+（廣州音）	寙	ữ
+（廣州音）	峿	ữ
 （廣州音）	峿	ǹg
-（南寧音）	峿	yữ
+（南寧音）	峿	ữ
 （南寧音）	峿	ǹg
-（廣州音）	挧	yữ
-（廣州音）	敔	yữ
+（廣州音）	挧	ữ
+（廣州音）	敔	ữ
 （欽州音）	敔	ỷ
-（南寧音）	敔	yữ
-（廣州音）	斔	yữ
-（廣州音）	斞	yữ
-（廣州音）	楀	yữ
+（南寧音）	敔	ữ
+（廣州音）	斔	ữ
+（廣州音）	斞	ữ
+（廣州音）	楀	ữ
 （通用版）	汝	nhữ
-（廣州音）	汝	yữ
+（廣州音）	汝	ữ
 （台山音）	汝	nỹ
 （欽州音）	汝	nhỉ
-（南寧音）	汝	yữ
-（廣州音）	瑀	yữ
+（南寧音）	汝	ữ
+（廣州音）	瑀	ữ
 （台山音）	瑀	yĩ
 （欽州音）	瑀	ỷ
-（南寧音）	瑀	yữ
-（廣州音）	瘐	yữ
+（南寧音）	瑀	ữ
+（廣州音）	瘐	ữ
 （台山音）	瘐	yì
-（南寧音）	瘐	yữ
-（廣州音）	禹	yữ
+（南寧音）	瘐	ữ
+（廣州音）	禹	ữ
 （台山音）	禹	yĩ
 （欽州音）	禹	ỷ
-（南寧音）	禹	yữ
-（廣州音）	窳	yữ
+（南寧音）	禹	ữ
+（廣州音）	窳	ữ
 （台山音）	窳	yài
 （台山音）	窳	yĩ
 （欽州音）	窳	ỷ
-（南寧音）	窳	yữ
-（廣州音）	篽	yữ
+（南寧音）	窳	ữ
+（廣州音）	篽	ữ
 （廣州音）	籹	nũi
-（廣州音）	籹	yữ
-（廣州音）	羽	yữ
+（廣州音）	籹	ữ
+（廣州音）	羽	ữ
 （台山音）	羽	yĩ
 （欽州音）	羽	ỷ
-（南寧音）	羽	yữ
-（廣州音）	肗	yữ
-（廣州音）	舙	yữ
+（南寧音）	羽	ữ
+（廣州音）	肗	ữ
+（廣州音）	舙	ữ
 （台山音）	舙	vã
 （台山音）	舙	xât
 （南寧音）	舙	vạ
-（廣州音）	蘌	yữ
+（廣州音）	蘌	ữ
 （通用版）	語	ngữ
 （通用版）	語	ngự
-（廣州音）	語	yữ
-（廣州音）	語	yự
+（廣州音）	語	ữ
+（廣州音）	語	ự
 （台山音）	語	ngũi
 （欽州音）	語	yì
 （欽州音）	語	ỷ
-（南寧音）	語	yữ
-（南寧音）	語	yự
-（廣州音）	貐	yữ
+（南寧音）	語	ữ
+（南寧音）	語	ự
+（廣州音）	貐	ữ
 （台山音）	貐	yì
 （欽州音）	貐	ỷ
-（南寧音）	貐	yữ
-（廣州音）	鋙	yữ
+（南寧音）	貐	ữ
+（廣州音）	鋙	ữ
 （廣州音）	鋙	ǹg
-（南寧音）	鋙	yữ
+（南寧音）	鋙	ữ
 （南寧音）	鋙	ǹg
-（廣州音）	雨	yữ
-（廣州音）	雨	yự
+（廣州音）	雨	ữ
+（廣州音）	雨	ự
 （台山音）	雨	yĩ
 （欽州音）	雨	ỷ
-（南寧音）	雨	yữ
+（南寧音）	雨	ữ
 （廣州音）	頨	piến
-（廣州音）	頨	yữ
+（廣州音）	頨	ữ
 （通用版）	麌	ngừ
 （通用版）	麌	ngữ
-（廣州音）	麌	yữ
+（廣州音）	麌	ữ
 （台山音）	麌	ngò
 （台山音）	麌	ngùi
 （通用版）	齬	ngữ
-（廣州音）	齬	yữ
+（廣州音）	齬	ữ
 （台山音）	齬	ngũi
 （欽州音）	齬	ỷ
-（南寧音）	齬	yữ
-（廣州音）	𠉴	yữ
-（廣州音）	𣳿	yữ
-（廣州音）	𦀡	yữ
-（廣州音）	𦲸	yữ
-（廣州音）	𧱬	yữ
-（廣州音）	𨦫	yữ
-（廣州音）	𨨶	yữ
-（廣州音）	𨺲	yữ
-（廣州音）	㹘	yự
-（廣州音）	䂊	yự
-（廣州音）	䘘	yự
-（廣州音）	䘱	yự
-（廣州音）	䢩	yự
-（廣州音）	䦸	yự
-（廣州音）	䨒	yự
-（廣州音）	䴁	yự
-（廣州音）	匬	yự
-（廣州音）	喩	yự
-（廣州音）	喻	yự
+（南寧音）	齬	ữ
+（廣州音）	𠉴	ữ
+（廣州音）	𣳿	ữ
+（廣州音）	𦀡	ữ
+（廣州音）	𦲸	ữ
+（廣州音）	𧱬	ữ
+（廣州音）	𨦫	ữ
+（廣州音）	𨨶	ữ
+（廣州音）	𨺲	ữ
+（廣州音）	㹘	ự
+（廣州音）	䂊	ự
+（廣州音）	䘘	ự
+（廣州音）	䘱	ự
+（廣州音）	䢩	ự
+（廣州音）	䦸	ự
+（廣州音）	䨒	ự
+（廣州音）	䴁	ự
+（廣州音）	匬	ự
+（廣州音）	喩	ự
+（廣州音）	喻	ự
 （台山音）	喻	yị
 （欽州音）	喻	yì
-（南寧音）	喻	yự
-（廣州音）	媀	yự
+（南寧音）	喻	ự
+（廣州音）	媀	ự
 （通用版）	寓	ngự
-（廣州音）	寓	yự
+（廣州音）	寓	ự
 （台山音）	寓	ngụi
 （欽州音）	寓	yì
-（南寧音）	寓	yự
+（南寧音）	寓	ự
 （通用版）	庽	ngự
-（廣州音）	庽	yự
+（廣州音）	庽	ự
 （台山音）	庽	ngụi
 （通用版）	御	ngự
 （廣州音）	御	ngạ
-（廣州音）	御	yự
+（廣州音）	御	ự
 （台山音）	御	ngụi
 （欽州音）	御	yì
-（南寧音）	御	yự
-（廣州音）	忬	yự
-（廣州音）	悆	yự
-（南寧音）	悆	yự
-（廣州音）	愈	yự
+（南寧音）	御	ự
+（廣州音）	忬	ự
+（廣州音）	悆	ự
+（南寧音）	悆	ự
+（廣州音）	愈	ự
 （台山音）	愈	yị
 （欽州音）	愈	yì
-（南寧音）	愈	yự
-（廣州音）	櫲	yự
+（南寧音）	愈	ự
+（廣州音）	櫲	ự
 （通用版）	洳	nhừ
-（廣州音）	洳	yự
+（廣州音）	洳	ự
 （台山音）	洳	ngùi
-（南寧音）	洳	yự
-（廣州音）	澦	yự
+（南寧音）	洳	ự
+（廣州音）	澦	ự
 （台山音）	澦	yị
-（南寧音）	澦	yự
-（廣州音）	瘉	yự
+（南寧音）	澦	ự
+（廣州音）	瘉	ự
 （台山音）	瘉	yị
-（南寧音）	瘉	yự
-（廣州音）	癒	yự
+（南寧音）	瘉	ự
+（廣州音）	癒	ự
 （台山音）	癒	yị
 （欽州音）	癒	yì
-（南寧音）	癒	yự
-（廣州音）	礖	yự
-（廣州音）	礜	yự
+（南寧音）	癒	ự
+（廣州音）	礖	ự
+（廣州音）	礜	ự
 （通用版）	禦	ngự
-（廣州音）	禦	yự
+（廣州音）	禦	ự
 （台山音）	禦	ngụi
 （欽州音）	禦	yì
-（南寧音）	禦	yự
-（廣州音）	穥	yự
-（廣州音）	籞	yự
-（廣州音）	蓹	yự
-（廣州音）	蕷	yự
+（南寧音）	禦	ự
+（廣州音）	穥	ự
+（廣州音）	籞	ự
+（廣州音）	蓹	ự
+（廣州音）	蕷	ự
 （台山音）	蕷	yị
 （欽州音）	蕷	yì
-（南寧音）	蕷	yự
+（南寧音）	蕷	ự
 （廣州音）	藇	chụi
-（廣州音）	藇	yự
-（廣州音）	裕	yự
+（廣州音）	藇	ự
+（廣州音）	裕	ự
 （台山音）	裕	yị
 （欽州音）	裕	yì
-（南寧音）	裕	yự
-（廣州音）	諭	yự
+（南寧音）	裕	ự
+（廣州音）	諭	ự
 （台山音）	諭	yị
 （欽州音）	諭	yì
-（南寧音）	諭	yự
-（廣州音）	豫	yự
+（南寧音）	諭	ự
+（廣州音）	豫	ự
 （台山音）	豫	yị
 （欽州音）	豫	yì
-（南寧音）	豫	yự
+（南寧音）	豫	ự
 （通用版）	遇	ngự
-（廣州音）	遇	yự
+（廣州音）	遇	ự
 （台山音）	遇	ngụi
 （欽州音）	遇	yì
-（南寧音）	遇	yự
-（廣州音）	預	yự
+（南寧音）	遇	ự
+（廣州音）	預	ự
 （台山音）	預	yị
 （欽州音）	預	yì
-（南寧音）	預	yự
+（南寧音）	預	ự
 （通用版）	馭	ngự
-（廣州音）	馭	yự
+（廣州音）	馭	ự
 （台山音）	馭	ngụi
 （欽州音）	馭	yì
-（南寧音）	馭	yự
-（廣州音）	龥	yự
+（南寧音）	馭	ự
+（廣州音）	龥	ự
 （台山音）	龥	yệc
-（廣州音）	𡒊	yự
+（廣州音）	𡒊	ự
 （廣州音）	㠾	oan
 （廣州音）	㴊	oan
 （廣州音）	㶜	oan
@@ -64931,17 +64931,17 @@
 （台山音）	𢑥	vọi
 （廣州音）	𣾀	vụi
 （廣州音）	𣿬	vụi
-（廣州音）	剜	vun
+（廣州音）	剜	vôn
 （廣州音）	剜	vổn
 （台山音）	剜	vỏn
 （欽州音）	剜	vôn
 （南寧音）	剜	vổn
-（廣州音）	婠	vun
+（廣州音）	婠	vôn
 （欽州音）	婠	vát
 （欽州音）	婠	vôn
 （欽州音）	婠	ọt
 （南寧音）	婠	vôn
-（廣州音）	豌	vun
+（廣州音）	豌	vôn
 （廣州音）	豌	vổn
 （台山音）	豌	vỏn
 （欽州音）	豌	vổn
@@ -70214,7 +70214,7 @@
 （南寧音）	竈	chố
 （廣州音）	䒃	chộ
 （廣州音）	䔘	chộ
-（通用版）	做	tộ
+（通用版）	做	tố
 （廣州音）	做	chộ
 （台山音）	做	tú
 （欽州音）	做	chú
@@ -71572,7 +71572,7 @@
 （南寧音）	𥀈	(白)yáp
 （南寧音）	𥀈	cháp
 （南寧音）	𪗛	yiện
-（南寧音）	与	yữ
+（南寧音）	与	ữ
 （南寧音）	𨙸	khì
 （南寧音）	𪨰	khuc
 （南寧音）	𠍲	khữ
