--- a/quocyuchinamninhva.yaml
+++ b/quocyuchinamninhva.yaml
@@ -6162,118 +6162,118 @@
 瘀	ử
 燠	ứ
 飫	ứ
-予	yừ
-于	yừ
-余	yừ
-餘	yừ
-俞	yừ
-儒	yừ
-喁	yừ
-嚅	yừ
-如	yừ
-妤	yừ
-娛	yừ
-嬬	yừ
-孺	yừ
-崳	yừ
-嵎	yừ
-嵛	yừ
-庾	(又)yừ
-愉	yừ
-愚	yừ
-挐	yừ
-揄	yừ
-旟	yừ
-榆	yừ
-歟	yừ
-歈	yừ
-毹	yừ
-漁	yừ
-渝	yừ
-濡	yừ
-牏	yừ
-狳	yừ
-璵	yừ
-瑜	yừ
-畬	yừ
-盂	yừ
-禺	yừ
-窬	yừ
-竽	yừ
-腴	yừ
-臑	yừ
-臾	yừ
-舁	yừ
-輿	yừ
-艅	yừ
-茹	yừ
-萸	yừ
-薷	yừ
-虞	yừ
-蝓	yừ
-蠕	yừ
-褕	yừ
-襦	yừ
-覦	yừ
-諛	yừ
-踰	yừ
-逾	yừ
-邘	yừ
-銣	yừ
-隃	yừ
-隅	yừ
-雩	yừ
-顬	yừ
-髃	yừ
-魚	yừ
-㺄	yữ
-与	yữ
-與	yữ
-乳	yữ
-予	yữ
-俁	yữ
-圄	yữ
-圉	yữ
-宇	yữ
-嶼	(常)yữ
-峿	yữ
-庾	yữ
-擩	yữ
-敔	yữ
-汝	yữ
-瑀	yữ
-瘐	yữ
-禹	yữ
-窳	yữ
-羽	yữ
-語	yữ
-貐	yữ
-鄅	yữ
-鋙	yữ
-雨	yữ
-齬	yữ
-籲	yự
-喻	yự
-寓	yự
-御	yự
-禦	yự
-悆	yự
-愈	yự
-癒	yự
-愉	(又)yự
-洳	yự
-澦	yự
-玉	(語)yự
-瘉	yự
-蕷	yự
-裕	yự
-譽	yự
-語	yự
-諭	yự
-豫	yự
-遇	yự
-預	yự
-馭	yự
+予	ừ
+于	ừ
+余	ừ
+餘	ừ
+俞	ừ
+儒	ừ
+喁	ừ
+嚅	ừ
+如	ừ
+妤	ừ
+娛	ừ
+嬬	ừ
+孺	ừ
+崳	ừ
+嵎	ừ
+嵛	ừ
+庾	(又)ừ
+愉	ừ
+愚	ừ
+挐	ừ
+揄	ừ
+旟	ừ
+榆	ừ
+歟	ừ
+歈	ừ
+毹	ừ
+漁	ừ
+渝	ừ
+濡	ừ
+牏	ừ
+狳	ừ
+璵	ừ
+瑜	ừ
+畬	ừ
+盂	ừ
+禺	ừ
+窬	ừ
+竽	ừ
+腴	ừ
+臑	ừ
+臾	ừ
+舁	ừ
+輿	ừ
+艅	ừ
+茹	ừ
+萸	ừ
+薷	ừ
+虞	ừ
+蝓	ừ
+蠕	ừ
+褕	ừ
+襦	ừ
+覦	ừ
+諛	ừ
+踰	ừ
+逾	ừ
+邘	ừ
+銣	ừ
+隃	ừ
+隅	ừ
+雩	ừ
+顬	ừ
+髃	ừ
+魚	ừ
+㺄	ữ
+与	ữ
+與	ữ
+乳	ữ
+予	ữ
+俁	ữ
+圄	ữ
+圉	ữ
+宇	ữ
+嶼	(常)ữ
+峿	ữ
+庾	ữ
+擩	ữ
+敔	ữ
+汝	ữ
+瑀	ữ
+瘐	ữ
+禹	ữ
+窳	ữ
+羽	ữ
+語	ữ
+貐	ữ
+鄅	ữ
+鋙	ữ
+雨	ữ
+齬	ữ
+籲	ự
+喻	ự
+寓	ự
+御	ự
+禦	ự
+悆	ự
+愈	ự
+癒	ự
+愉	(又)ự
+洳	ự
+澦	ự
+玉	(語)ự
+瘉	ự
+蕷	ự
+裕	ự
+譽	ự
+語	ự
+諭	ự
+豫	ự
+遇	ự
+預	ự
+馭	ự
 㾓	oan
 冤	oan
 宛	oan
@@ -14111,15 +14111,15 @@
 乾爽	kon sỏng
 乾燥	kon xố
 外強中乾	ngọi khường chung kon
-予智	yừ chí
-予聖	yừ sính
-予一人	yừ yât yần
-予小子	yừ sliểu chủ
-予小子	yừ sliểu chỉ
-予取予求	yừ xử yừ khầu
-于飛	yừ phi
-于歸	yừ quy
-于闐	yừ thiền
+予智	ừ chí
+予聖	ừ sính
+予一人	ừ yât yần
+予小子	ừ sliểu chủ
+予小子	ừ sliểu chỉ
+予取予求	ừ xử ừ khầu
+于飛	ừ phi
+于歸	ừ quy
+于闐	ừ thiền
 亟待	kich đọi
 亟亟	kich kich
 需款甚亟	slư phổn sậm kich
@@ -14337,7 +14337,7 @@
 假公濟私	kả kung cháy su/kả kung chế su
 假公濟私	kả kung cháy si/kả kung chế si
 真假	chân kả
-假如	kả yừ
+假如	kả ừ
 假使	kả sảy
 假貨	kả phó
 假想	kả slưởng
@@ -14749,7 +14749,7 @@
 填咽	thiền yiết/thiền yết
 咯血	khách hoát
 咯痰	khách thàm
-咯魚翅	khách yừ xí
+咯魚翅	khách ừ xí
 咯咯笑	kóc kóc sliếu
 咯崩	kóc băng
 咯噔	kóc đăng
@@ -14841,7 +14841,7 @@
 奔喪	bân slong
 弔喪	điếu slong
 喪亂	slong loạn
-單于	siềm yừ
+單于	siềm ừ
 姓單	slính siện
 單縣	siện yoạn
 嗎哪	mã nà
@@ -14859,8 +14859,8 @@
 嘀嘀咕咕	địch địch kô kô
 黑嘛嘛	hăc ma ma
 喧嘩	hoan va
-輿論大嘩	yừ loạn đại va
-輿論大嘩	yừ lận đại va
+輿論大嘩	ừ loạn đại va
+輿論大嘩	ừ lận đại va
 嘩衆取寵	va chúng xử xủng
 嘩眾取寵	va chúng xử xủng
 嘩然	va yiền
@@ -14899,7 +14899,7 @@
 花圈	pha hoan
 圈狀物	hoan chọng mật
 影視圈	yỉnh sị hoan
-娛樂圈	yừ lọc hoan
+娛樂圈	ừ lọc hoan
 圈圈點點	hoan hoan điểm điểm
 圈地運動	hoan đị vận đụng
 可圈可點	hỏ hoan hỏ điểm
@@ -14958,8 +14958,8 @@
 夫天地者	phồ thiên đị chẻ
 夫人不言	phồ yần bât yiền
 夫戰	phồ chiến
-逝者如斯夫	sạy chẻ yừ su phồ/sệ chẻ yừ su phồ
-逝者如斯夫	sạy chẻ yừ si phồ/sệ chẻ yừ si phồ
+逝者如斯夫	sạy chẻ ừ su phồ/sệ chẻ ừ su phồ
+逝者如斯夫	sạy chẻ ừ si phồ/sệ chẻ ừ si phồ
 奇數	ki số
 奇偶	ki ngẫu
 五十有奇	ñg sập yẫu ki
@@ -15394,7 +15394,7 @@
 變徵	biến chỉ
 流徵	lầu chỉ
 雜以流徵	chạp yĩ lầu chỉ
-宮商角徵羽	kung sương kóc chỉ yữ
+宮商角徵羽	kung sương kóc chỉ ữ
 徵召	chinh chiệu
 象徵	chượng chinh
 特徵	đặc chinh
@@ -15468,8 +15468,8 @@
 應徵	yính chinh
 應變	yính biến
 應驗	yính niệm
-應付自如	yính phộ chụ yừ
-應付自如	yính phộ chị yừ
+應付自如	yính phộ chụ ừ
+應付自如	yính phộ chị ừ
 應接不暇	yính chiếp bât hạ
 應運而生	yính vận yì sanh
 回應	vồi yính
@@ -15479,7 +15479,7 @@
 應屆	yính kái
 應戰	yính chiến
 應時	yính sì
-應答如流	yính đáp yừ lầu
+應答如流	yính đáp ừ lầu
 應和	yính vò
 應考	yính hảo
 應口	yính hẩu
@@ -15585,8 +15585,8 @@
 撈佬	lao lổ
 撈起	leo hỉ
 撈起	lao hỉ
-撈魚	leo yừ
-撈魚	lao yừ
+撈魚	leo ừ
+撈魚	lao ừ
 打撈	đả lèo
 大海撈針	đại hỏi lèo châm
 打撈	đả lào
@@ -15642,7 +15642,7 @@
 散文	slản mần
 散套	slản thố
 散髮	slản phát
-散儒	slản yừ
+散儒	slản ừ
 散體	slản thảy/slản thể
 懶散	lãn slản
 散兵游勇	slản binh yầu yũng
@@ -15660,7 +15660,7 @@
 判斷	pốn đoán
 獨斷獨行	đục đoán đục hằng
 斷言	đoán yiền
-斷語	đoán yữ
+斷語	đoán ữ
 診斷	xẩn đoán
 明斷	mình đoán
 斷無此理	đoán mồ xủ lĩ
@@ -15687,7 +15687,7 @@
 斷代史	thoãn đọi sảy
 容易	yùng yị
 難易	nàn yị
-易如反掌	yị yừ phản chưởng
+易如反掌	yị ừ phản chưởng
 平易近人	pình yị kận yần
 輕而易舉	hinh yì yị kử
 易燃物	yị yiền mật
@@ -15993,7 +15993,7 @@
 氐族	đay chục/đê chục
 氐羌	đay khương/đê khương
 根氐	kân đảy/kân để
-愚氓	yừ mần
+愚氓	ừ mần
 氓之蚩蚩	mần chi xi xi
 流氓	lầu mòng
 沈沒	xầm một
@@ -16013,9 +16013,9 @@
 勸善沮惡	hoán siện chử óc
 神辱志沮	sần yục chí chử
 氣沮	hí chử
-沮洳	chứ yự
+沮洳	chứ ự
 沮澤	chứ chạch
-沮洳場	chứ yự xường
+沮洳場	chứ ự xường
 沮水	chư sổi
 起泡	hỉ péo
 泡沫	pỗ một
@@ -16077,8 +16077,8 @@
 豆腐𦢊	đậu phộ boc
 豆泡	đậu boc
 豆𦢊	đậu boc
-魚泡	yừ boc
-魚𦢊	yừ boc
+魚泡	ừ boc
+魚𦢊	ừ boc
 水泡	sổi páo
 浚縣	sloán yoạn
 浚縣	slấn yoạn
@@ -16224,10 +16224,10 @@
 焉得虎子	yiên đăc phổ chủ/yên đăc phổ chủ
 焉得虎子	yiên đăc phổ chỉ/yên đăc phổ chỉ
 有厚望焉	yẫu hẫu mọng yiên/yẫu hẫu mọng yên
-焉能如此	yiên nằng yừ xủ/yên nằng yừ xủ
-焉能如此	yiên nằng yừ xỉ/yên nằng yừ xỉ
+焉能如此	yiên nằng ừ xủ/yên nằng ừ xủ
+焉能如此	yiên nằng ừ xỉ/yên nằng ừ xỉ
 焉用	yiên yụng/yên yụng
-語焉不詳	yữ yiền bât xường
+語焉不詳	ữ yiền bât xường
 心不在焉	slâm bât chọi yiền
 罪莫大焉	chội mọc đại yiền
 樂莫大焉	lọc mọc đại yiền
@@ -16246,7 +16246,7 @@
 燕子	yiến chỉ/yến chỉ
 燕窩	yiến vo/yến vo
 勞燕分飛	lồ yiến phân phi/lồ yến phân phi
-燕語鶯聲	yiến yữ ăng sênh/yến yữ ăng sênh
+燕語鶯聲	yiến ữ ăng sênh/yến ữ ăng sênh
 燕好	yiến hổ/yến hổ
 燕侶	yiến lữ/yến lữ
 燕麥	yiến mặc/yến mặc
@@ -16368,7 +16368,7 @@
 畫舫	vả phỏng
 國畫	kóc vả
 動漫畫	đụng mạn vả
-江山如畫	kong san yừ vả
+江山如畫	kong san ừ vả
 畫屏	vả pình
 畫卷	vả koản
 畫面	vả miển
@@ -16390,7 +16390,7 @@
 畫虎類犬	vạch phổ lội hoản
 畫圈	vạch hoan
 畫知	vạch chi
-番禺	pôn yừ
+番禺	pôn ừ
 典當	điểm đóng
 當作	đóng chóc
 妥當	thõ đóng
@@ -16431,8 +16431,8 @@
 門當戶對	mồn đong ụ đối
 當頭棒喝	đong thầu bọng hót
 獨當一面	đục đong yât miện
-理當如此	lĩ đong yừ xủ
-理當如此	lĩ đong yừ xỉ
+理當如此	lĩ đong ừ xủ
+理當如此	lĩ đong ừ xỉ
 螳臂當車	thòng bí đong xe
 當天	đong thiên
 當晚	đong mãn
@@ -16558,8 +16558,8 @@
 相形見絀	slương yình kiến choát
 相依爲命	slương yi ùy mịnh
 相得益彰	slương đăc yich chương
-相敬如賓	slương kính yừ bân
-相濡以沫	slương yừ yĩ một
+相敬如賓	slương kính ừ bân
+相濡以沫	slương ừ yĩ một
 反省	phản slỉnh
 省悟	slỉnh ṇg
 省親	slỉnh xân
@@ -16761,7 +16761,7 @@
 衣不稱身	y bât xính sân
 稱意	xính yí
 稱職	xính chich
-稱心如意	xính slâm yừ yí
+稱心如意	xính slâm ừ yí
 稱體裁衣	xính thảy xòi yi/xính thể xòi yi
 對稱	đối xính
 杆秤	kỏn xính
@@ -16802,14 +16802,14 @@
 敬稱	kính xinh
 人稱	yần xinh
 稱揚	xinh yường
-交口稱譽	kao hẩu xinh yự
+交口稱譽	kao hẩu xinh ự
 稱觴祝壽	xinh sương chuc sậu
 稱快	xinh phái
 稱羨	xinh sliến
 稱奇	xinh khì
 稱號	xinh hộ
 稱雄	xinh hùng
-稱譽	xinh yự
+稱譽	xinh ự
 稱賞	xinh sưởng
 稱頌	xinh chụng
 虧空	khuy hung
@@ -16850,7 +16850,7 @@
 累遷	lỗi xiêm
 累進	lỗi chấn
 日積月累	yật chich yoạt lỗi
-危如累卵	ngày yừ lỗi loản
+危如累卵	ngày ừ lỗi loản
 累教不改	lỗi káo bât kỏi
 累年豐收	lỗi niền phung sâu
 連篇累牘	liền piên lỗi đục
@@ -16860,14 +16860,14 @@
 罪行累累	chội hằng lỗi lỗi
 傷痕累累	sương hần lỗi lỗi
 累累犯錯	lỗi lỗi phạn xó
-勢如累卵	sáy yừ lỗi loản/sế yừ lỗi loản
+勢如累卵	sáy ừ lỗi loản/sế ừ lỗi loản
 果實累累	kỏ sật lồi lồi
 碩果累累	sệc kỏ lồi lồi
 累囚	lồi xầu
 負債累累	phộ chái lỗi lỗi
 累贅	lồi chội
 綸巾	quan kân
-羽扇綸巾	yữ siến quan kân
+羽扇綸巾	ữ siến quan kân
 姓繆	slính miệu
 綢繆	xầu mầu
 紕繆	pi mậu
@@ -16998,7 +16998,7 @@
 胖墩墩	pỗn đân đân
 胖乎乎	pỗn ồ ồ
 胖嘟嘟	pỗn đô đô
-胖頭魚	pỗn thầu yừ
+胖頭魚	pỗn thầu ừ
 心廣體胖	slâm kỏng thảy pồn/slâm kỏng thể pồn
 背書	bội sư
 背誦	bội chụng
@@ -17358,12 +17358,12 @@
 地藏菩薩	đị chọng pò slát
 大藏經	đại chọng kinh
 道藏	độ chọng
-漢藏語系	hón chọng yữ hạy/hón chọng yữ hệ
+漢藏語系	hón chọng ữ hạy/hón chọng ữ hệ
 三藏	slam chọng
 藏紅花	chọng hùng pha
 藏羚羊	chọng lình yường
 藏獨	chọng đục
-藏語	chọng yữ
+藏語	chọng ữ
 藏傳	chọng xoàn
 藏傳佛教	chọng xoàn phật káo
 藏文	chọng mần
@@ -17491,7 +17491,7 @@
 蛇心佛口	sè slâm phật hẩu
 蛇頭	sè thầu
 杯弓蛇影	bôi kung sè yỉnh
-虛與委蛇	hư yữ ủy yì
+虛與委蛇	hư ữ ủy yì
 委蛇	ủy yì
 蛤乸	kấp nả
 蛤蜊	kấp lì
@@ -17694,7 +17694,7 @@
 着褸	chước lâu
 短褸	đoản lâu
 絨褸	yủng lâu
-雨褸	yữ lâu
+雨褸	ữ lâu
 雪褸	sloát lâu
 風褸	phung lâu
 襤褸	làm lữ
@@ -17739,7 +17739,7 @@
 要約	yêu yước
 要挾	yêu hiếp
 要盟	yêu mằng
-要譽	yêu yự
+要譽	yêu ự
 覃思	thàm su
 覃思	thàm si
 覃第	thàm đạy/thàm đệ
@@ -17963,7 +17963,7 @@
 木料	mục liểu
 染料	yiễm liểu
 流料	lầu liểu
-預料	yự liệu
+預料	ự liệu
 始料不及	xỉ liệu bât kập
 豈料	hỉ liệu
 未料	mị liệu
@@ -18028,8 +18028,8 @@
 調脂弄粉	thiều chi nụng phẩn
 調嘴學舌	thiều chổi học siệt
 協調	hiếp thiều
-風調雨順	phung thiều yữ soạn
-風調雨順	phung thiều yữ sận
+風調雨順	phung thiều ữ soạn
+風調雨順	phung thiều ữ sận
 調酒	thiều chẩu
 調酒師	thiều chẩu su
 調酒師	thiều chẩu si
@@ -18075,13 +18075,13 @@
 賈害	kổ họi
 賈禍	kổ vọ
 賈儈	kổ khúy
-賈其餘勇	kổ khì yừ yũng
+賈其餘勇	kổ khì ừ yũng
 富商大賈	phố sương đại kổ
 多錢善賈	đo xiền siện kổ
 私賈民田	su kổ mần thiền
 私賈民田	si kổ mần thiền
 賈馬	kổ mã
-餘勇可賈	yừ yũng hỏ kổ
+餘勇可賈	ừ yũng hỏ kổ
 蹊蹺	khay khiểu/khê khiểu
 蹊徑	hày kính/hề kính
 下自成蹊	hạ chụ sình hày/hạ chụ sình hề
@@ -18606,12 +18606,12 @@
 阿膠	o keo
 阿膠	o kao
 阿彌陀佛	o mi thò phật
-阿諛奉承	o yừ phụng sình
+阿諛奉承	o ừ phụng sình
 阿附	o phộ
 阿私	o su
 阿私	o si
 阿黨	o đỏng
-阿諛	o yừ
+阿諛	o ừ
 山阿	san o
 剛正不阿	kong chính bât o
 東阿	đung o
@@ -18625,7 +18625,7 @@
 招降	chiêu hòng
 一物降一物	yât mật hòng yât mật
 下降	hạ kóng
-降雨	kóng yữ
+降雨	kóng ữ
 降低	kóng đay/kóng đê
 降生	kóng sanh
 降旨	kóng chỉ
@@ -18695,7 +18695,7 @@
 駁難	bóc nạn
 辯難	biện nạn
 危難	ngày nạn
-遇難	yự nạn
+遇難	ự nạn
 排憂解難	pài yâu kải nạn
 救苦救難	kấu phổ kấu nạn
 刁難	điêu nạn
@@ -18859,7 +18859,7 @@
 龜茲	kâu xù
 龜裂	quân liệt
 玉米	yục mãy/yục mễ
-玉米	yự mãy/yự mễ
+玉米	ự mãy/ự mễ
 地上	đị sượng
 床檔	xòng đóng
 炕床	khóng xòng
@@ -19269,7 +19269,7 @@
 粈𪐌𪐌	neo nặc nặc
 熱坺坺	yiệt bạt bạt
 乾繃繃	kon măng măng
-落雨𩄝𩄝	lọc yữ slà slà
+落雨𩄝𩄝	lọc ữ slà slà
 說服	soát phục
 遊說	yầu soát
 說客	soát hách
