--- a/quocyuchiquongchauyam.dic.yaml
+++ b/quocyuchiquongchauyam.dic.yaml
@@ -15950,324 +15950,324 @@
 醧	ứ
 飫	ứ
 饇	ứ
-㐵	yừ
-㔱	yừ
-㖲	yừ
-㤤	yừ
-㥚	yừ
-㥥	yừ
-㦙	yừ
-㦛	yừ
-㬂	yừ
-㬰	yừ
-㭌	yừ
-㳛	yừ
-㶛	yừ
-㷒	yừ
-㺞	yừ
-㻀	yừ
-㻦	yừ
-㼶	yừ
-㾒	yừ
-䁩	yừ
-䂛	yừ
-䃋	yừ
-䄖	yừ
-䄨	yừ
-䍂	yừ
-䏸	yừ
-䐳	yừ
-䔡	yừ
-䗨	yừ
-䘫	yừ
-䚤	yừ
-䛕	yừ
-䜽	yừ
-䞕	yừ
-䢓	yừ
-䣿	yừ
-䩒	yừ
-䫱	yừ
-䬔	yừ
-䰭	yừ
-䰰	yừ
-䰻	yừ
-䱷	yừ
-䲆	yừ
-予	yừ
-于	yừ
-伃	yừ
-余	yừ
-侞	yừ
-俞	yừ
-儒	yừ
-兪	yừ
-吾	yừ
-喁	yừ
-嚅	yừ
-圩	yừ
-堣	yừ
-堬	yừ
-如	yừ
-妤	yừ
-娛	yừ
-娯	yừ
-婾	yừ
-媮	yừ
-嬩	yừ
-嬬	yừ
-孺	yừ
-崳	yừ
-嵎	yừ
-嵛	yừ
-嶼	yừ
-帤	yừ
-庾	yừ
-愉	yừ
-愚	yừ
-懙	yừ
-挐	yừ
-揄	yừ
-擩	yừ
-於	yừ
-旟	yừ
-曘	yừ
-杅	yừ
-桇	yừ
-桙	yừ
-楡	yừ
-楰	yừ
-榆	yừ
-歈	yừ
-歟	yừ
-歶	yừ
-毹	yừ
-毺	yừ
-渝	yừ
-渪	yừ
-湡	yừ
-漁	yừ
-澞	yừ
-濡	yừ
-燸	yừ
-牏	yừ
-狳	yừ
-瑜	yừ
-璵	yừ
-畬	yừ
-畭	yừ
-盂	yừ
-睮	yừ
-硢	yừ
-禺	yừ
-窬	yừ
-竽	yừ
-筎	yừ
-籅	yừ
-繻	yừ
-羭	yừ
-腢	yừ
-腴	yừ
-臑	yừ
-臾	yừ
-舁	yừ
-與	yừ
-艅	yừ
-茰	yừ
-茹	yừ
-萮	yừ
-萸	yừ
-蒘	yừ
-蕍	yừ
-蕠	yừ
-薷	yừ
-虞	yừ
-蝓	yừ
-蝡	yừ
-螸	yừ
-蠕	yừ
-袽	yừ
-褕	yừ
-襦	yừ
-覦	yừ
-諛	yừ
-謣	yừ
-譃	yừ
-譽	yừ
-踰	yừ
-輿	yừ
-轝	yừ
-迂	yừ
-逾	yừ
-邘	yừ
-邚	yừ
-醹	yừ
-釪	yừ
-銣	yừ
-鍝	yừ
-隃	yừ
-隅	yừ
-雓	yừ
-雩	yừ
-顬	yừ
-餘	yừ
-馀	yừ
-騟	yừ
-骬	yừ
-髃	yừ
-魚	yừ
-魣	yừ
-鮽	yừ
-鰅	yừ
-鱬	yừ
-鴑	yừ
-鴽	yừ
-鷠	yừ
-鸆	yừ
-鸒	yừ
-齵	yừ
-𠈌	yừ
-𠏋	yừ
-𠯆	yừ
-𡢢	yừ
-𢢭	yừ
-𣈯	yừ
-𤲞	yừ
-𦖭	yừ
-𦽳	yừ
-𩁹	yừ
-𩦢	yừ
-𩺰	yừ
-㐠	yữ
-㑨	yữ
-㒁	yữ
-㒜	yữ
-㖳	yữ
-㘾	yữ
-㙑	yữ
-㙖	yữ
-㝢	yữ
-㡰	yữ
-㨎	yữ
-㲾	yữ
-㺄	yữ
-㼌	yữ
-䣁	yữ
-䥏	yữ
-䨞	yữ
-乳	yữ
-予	yữ
-俁	yữ
-偊	yữ
-噳	yữ
-圄	yữ
-圉	yữ
-女	yữ
-宇	yữ
-寙	yữ
-峿	yữ
-嶼	yữ
-庾	yữ
-懙	yữ
-挧	yữ
-擩	yữ
-敔	yữ
-斔	yữ
-斞	yữ
-楀	yữ
-汝	yữ
-瑀	yữ
-瘐	yữ
-祤	yữ
-禹	yữ
-穻	yữ
-窳	yữ
-篽	yữ
-籹	yữ
-羽	yữ
-肗	yữ
-與	yữ
-舙	yữ
-萭	yữ
-蘌	yữ
-蝺	yữ
-語	yữ
-貐	yữ
-鄅	yữ
-醹	yữ
-鋙	yữ
-雨	yữ
-頨	yữ
-麌	yữ
-齬	yữ
-𠉴	yữ
-𣳿	yữ
-𦀡	yữ
-𦲸	yữ
-𧱬	yữ
-𨦫	yữ
-𨨶	yữ
-𨺲	yữ
-㹘	yự
-䂊	yự
-䘘	yự
-䘱	yự
-䢩	yự
-䦸	yự
-䨒	yự
-䴁	yự
-俞	yự
-兪	yự
-匬	yự
-吁	yự
-喩	yự
-喻	yự
-媀	yự
-孺	yự
-寓	yự
-峪	yự
-庽	yự
-御	yự
-忬	yự
-悆	yự
-愈	yự
-愉	yự
-櫲	yự
-洳	yự
-澦	yự
-瘉	yự
-癒	yự
-礖	yự
-礜	yự
-禦	yự
-禺	yự
-穥	yự
-窬	yự
-籞	yự
-籲	yự
-翑	yự
-與	yự
-茹	yự
-蓹	yự
-蕷	yự
-藇	yự
-裕	yự
-覦	yự
-語	yự
-諭	yự
-譽	yự
-豫	yự
-踰	yự
-逾	yự
-遇	yự
-銣	yự
-隅	yự
-雨	yự
-預	yự
-馭	yự
-龥	yự
-𡒊	yự
-𩁹	yự
+㐵	ừ
+㔱	ừ
+㖲	ừ
+㤤	ừ
+㥚	ừ
+㥥	ừ
+㦙	ừ
+㦛	ừ
+㬂	ừ
+㬰	ừ
+㭌	ừ
+㳛	ừ
+㶛	ừ
+㷒	ừ
+㺞	ừ
+㻀	ừ
+㻦	ừ
+㼶	ừ
+㾒	ừ
+䁩	ừ
+䂛	ừ
+䃋	ừ
+䄖	ừ
+䄨	ừ
+䍂	ừ
+䏸	ừ
+䐳	ừ
+䔡	ừ
+䗨	ừ
+䘫	ừ
+䚤	ừ
+䛕	ừ
+䜽	ừ
+䞕	ừ
+䢓	ừ
+䣿	ừ
+䩒	ừ
+䫱	ừ
+䬔	ừ
+䰭	ừ
+䰰	ừ
+䰻	ừ
+䱷	ừ
+䲆	ừ
+予	ừ
+于	ừ
+伃	ừ
+余	ừ
+侞	ừ
+俞	ừ
+儒	ừ
+兪	ừ
+吾	ừ
+喁	ừ
+嚅	ừ
+圩	ừ
+堣	ừ
+堬	ừ
+如	ừ
+妤	ừ
+娛	ừ
+娯	ừ
+婾	ừ
+媮	ừ
+嬩	ừ
+嬬	ừ
+孺	ừ
+崳	ừ
+嵎	ừ
+嵛	ừ
+嶼	ừ
+帤	ừ
+庾	ừ
+愉	ừ
+愚	ừ
+懙	ừ
+挐	ừ
+揄	ừ
+擩	ừ
+於	ừ
+旟	ừ
+曘	ừ
+杅	ừ
+桇	ừ
+桙	ừ
+楡	ừ
+楰	ừ
+榆	ừ
+歈	ừ
+歟	ừ
+歶	ừ
+毹	ừ
+毺	ừ
+渝	ừ
+渪	ừ
+湡	ừ
+漁	ừ
+澞	ừ
+濡	ừ
+燸	ừ
+牏	ừ
+狳	ừ
+瑜	ừ
+璵	ừ
+畬	ừ
+畭	ừ
+盂	ừ
+睮	ừ
+硢	ừ
+禺	ừ
+窬	ừ
+竽	ừ
+筎	ừ
+籅	ừ
+繻	ừ
+羭	ừ
+腢	ừ
+腴	ừ
+臑	ừ
+臾	ừ
+舁	ừ
+與	ừ
+艅	ừ
+茰	ừ
+茹	ừ
+萮	ừ
+萸	ừ
+蒘	ừ
+蕍	ừ
+蕠	ừ
+薷	ừ
+虞	ừ
+蝓	ừ
+蝡	ừ
+螸	ừ
+蠕	ừ
+袽	ừ
+褕	ừ
+襦	ừ
+覦	ừ
+諛	ừ
+謣	ừ
+譃	ừ
+譽	ừ
+踰	ừ
+輿	ừ
+轝	ừ
+迂	ừ
+逾	ừ
+邘	ừ
+邚	ừ
+醹	ừ
+釪	ừ
+銣	ừ
+鍝	ừ
+隃	ừ
+隅	ừ
+雓	ừ
+雩	ừ
+顬	ừ
+餘	ừ
+馀	ừ
+騟	ừ
+骬	ừ
+髃	ừ
+魚	ừ
+魣	ừ
+鮽	ừ
+鰅	ừ
+鱬	ừ
+鴑	ừ
+鴽	ừ
+鷠	ừ
+鸆	ừ
+鸒	ừ
+齵	ừ
+𠈌	ừ
+𠏋	ừ
+𠯆	ừ
+𡢢	ừ
+𢢭	ừ
+𣈯	ừ
+𤲞	ừ
+𦖭	ừ
+𦽳	ừ
+𩁹	ừ
+𩦢	ừ
+𩺰	ừ
+㐠	ữ
+㑨	ữ
+㒁	ữ
+㒜	ữ
+㖳	ữ
+㘾	ữ
+㙑	ữ
+㙖	ữ
+㝢	ữ
+㡰	ữ
+㨎	ữ
+㲾	ữ
+㺄	ữ
+㼌	ữ
+䣁	ữ
+䥏	ữ
+䨞	ữ
+乳	ữ
+予	ữ
+俁	ữ
+偊	ữ
+噳	ữ
+圄	ữ
+圉	ữ
+女	ữ
+宇	ữ
+寙	ữ
+峿	ữ
+嶼	ữ
+庾	ữ
+懙	ữ
+挧	ữ
+擩	ữ
+敔	ữ
+斔	ữ
+斞	ữ
+楀	ữ
+汝	ữ
+瑀	ữ
+瘐	ữ
+祤	ữ
+禹	ữ
+穻	ữ
+窳	ữ
+篽	ữ
+籹	ữ
+羽	ữ
+肗	ữ
+與	ữ
+舙	ữ
+萭	ữ
+蘌	ữ
+蝺	ữ
+語	ữ
+貐	ữ
+鄅	ữ
+醹	ữ
+鋙	ữ
+雨	ữ
+頨	ữ
+麌	ữ
+齬	ữ
+𠉴	ữ
+𣳿	ữ
+𦀡	ữ
+𦲸	ữ
+𧱬	ữ
+𨦫	ữ
+𨨶	ữ
+𨺲	ữ
+㹘	ự
+䂊	ự
+䘘	ự
+䘱	ự
+䢩	ự
+䦸	ự
+䨒	ự
+䴁	ự
+俞	ự
+兪	ự
+匬	ự
+吁	ự
+喩	ự
+喻	ự
+媀	ự
+孺	ự
+寓	ự
+峪	ự
+庽	ự
+御	ự
+忬	ự
+悆	ự
+愈	ự
+愉	ự
+櫲	ự
+洳	ự
+澦	ự
+瘉	ự
+癒	ự
+礖	ự
+礜	ự
+禦	ự
+禺	ự
+穥	ự
+窬	ự
+籞	ự
+籲	ự
+翑	ự
+與	ự
+茹	ự
+蓹	ự
+蕷	ự
+藇	ự
+裕	ự
+覦	ự
+語	ự
+諭	ự
+譽	ự
+豫	ự
+踰	ự
+逾	ự
+遇	ự
+銣	ự
+隅	ự
+雨	ự
+預	ự
+馭	ự
+龥	ự
+𡒊	ự
+𩁹	ự
 㠾	oan
 㴊	oan
 㶜	oan
@@ -30729,10 +30729,10 @@
 𢑥	vội
 𣾀	vội
 𣿬	vội
-剜	vun
-婠	vun
-莞	vun
-豌	vun
+剜	vôn
+婠	vôn
+莞	vôn
+豌	vôn
 㼝	vổn
 䝹	vổn
 剜	vổn
